api: add tags
